--- a/storage/src/styles/modal.css
+++ b/storage/src/styles/modal.css
@@ -1,10 +1,4 @@
-.card-img-top {
-    width: 100%;
-    height: 16rem;
-    object-fit: cover;
-}
-
-.cardBody {
+.modal-content {
     background: rgba( 213, 213, 213, 0.7 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 4px );
